--- a/configure.ac
+++ b/configure.ac
@@ -29,10 +29,13 @@ if test "x$GXX" = "xyes" -a "x$enable_debug" = "xyes" ; then
    CXXFLAGS="$CXXFLAGS -O0 -ggdb"
 fi
 
+# For c++11 compatibility. Required at least in VCAI
+CXXFLAGS="$CXXFLAGS -std=c++0x"
+
 # For gcc and compatible compilers, enable compilation warnings, but
 # selectively disable some because too many are generated.
 if test "x$GXX" = "xyes" ; then
-   CXXFLAGS="$CXXFLAGS -Wall -Wno-switch -Wno-sign-compare -Wcast-align -Wpointer-arith -Wno-unknown-pragmas"
+   CXXFLAGS="$CXXFLAGS -Wall -Wno-switch -Wno-sign-compare -Wcast-align -Wpointer-arith"
 fi
 
 # extra clang parameters
@@ -107,4 +110,4 @@ AC_SUBST(VCMI_AI_LIBS_DIR)
 VCMI_SCRIPTING_LIBS_DIR="$libdir/vcmi/Scripting"
 AC_SUBST(VCMI_SCRIPTING_LIBS_DIR)
 
-AC_OUTPUT(Makefile lib/Makefile client/Makefile server/Makefile AI/Makefile AI/StupidAI/Makefile AI/GeniusAI/Makefile AI/EmptyAI/Makefile Scripting/ERM/Makefile)
+AC_OUTPUT(Makefile lib/Makefile client/Makefile server/Makefile AI/Makefile AI/StupidAI/Makefile AI/EmptyAI/Makefile Scripting/ERM/Makefile)
